[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyTowerr"
description = "A Python Tower Defense 2D game for Genetic Algorithms"
version = "1.2-BETA"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors =  [
    {name = "António Raimundo", email = "aslro@iscte-iul.pt"},
]

dependencies = [
    "asgiref == 3.8.1",
    "contourpy == 1.3.1",
    "cycler == 0.12.1",
    "fonttools == 4.55.0",
    "image == 1.5.33",
    "joblib == 1.4.2",
    "kiwisolver == 1.4.7",
    "matplotlib == 3.9.2",
    "numpy == 2.1.3",
    "packaging == 24.2",
    "Pillow == 11.0.0",
    "pygad == 3.3.1",
    "pygame == 2.6.1",
    "pyparsing == 3.2.0",
    "python-dateutil == 2.9.0",
    "six == 1.16.0",
    "sqlparse == 0.5.2",
    "tzdata == 2024.2",
    "vc == 2018.7.10",
]

[project.scripts]
pygraphr = "main:main"